Add a little change in pom.xml in smarthome module

--- a/smarthome/pom.xml
+++ b/smarthome/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.smarthome</groupId>
 	<artifactId>smartHome</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>smartHome</name>
+	<name>smarthome</name>
 	<description>Laba</description>
 	<properties>
 		<java.version>11</java.version>
